--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,2 +1,3 @@
 add_executable(a-prelab2 PreLabs/a-prelab2.c)
 add_executable(a-lab2 InClassLabs/a-lab2.c)
+add_executable(a-prelab3 PreLabs/a-prelab3.c)
