--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,3 +1,5 @@
 add_executable(a-prelab2 PreLabs/a-prelab2.c)
 add_executable(a-lab2 InClassLabs/a-lab2.c)
 add_executable(a-prelab3 PreLabs/a-prelab3.c)
+add_executable(sectionletter-hw1.c PreLabs/a-hw1.c)
+add_executable(a-lab3.c InClassLabs/a-lab3.c)
