--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,4 +2,7 @@ add_executable(a-prelab2 PreLabs/a-prelab2.c)
 add_executable(a-lab2 InClassLabs/a-lab2.c)
 add_executable(a-prelab3 PreLabs/a-prelab3.c)
 add_executable(sectionletter-hw1.c PreLabs/a-hw1.c)
-add_executable(a-lab3.c InClassLabs/a-lab3.c)
+add_executable(a-lab3 InClassLabs/a-lab3.c)
+add_executable(a-hw1 PreLabs/a-hw1.c)
+add_executable(a-prelab4.c PreLabs/a-prelab4.c)
+add_executable(a-lab4.c InClassLabs/a-lab4.c)
