Calculates the monthly Electricity utility bill based on the number

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,3 +6,4 @@ add_executable(a-lab3 InClassLabs/a-lab3.c)
 add_executable(a-hw1 PreLabs/a-hw1.c)
 add_executable(a-prelab4.c PreLabs/a-prelab4.c)
 add_executable(a-lab4.c InClassLabs/a-lab4.c)
+add_executable(hw_draft.c InClassLabs/hw_draft.c)
