--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,3 +7,4 @@ add_executable(a-hw1 PreLabs/a-hw1.c)
 add_executable(a-prelab4.c PreLabs/a-prelab4.c)
 add_executable(a-lab4.c InClassLabs/a-lab4.c)
 add_executable(a-prelab5.c PreLabs/a-prelab5.c)
+add_executable(a-lab5.c InClassLabs/a-lab5.c)
