--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,3 +8,4 @@ add_executable(a-prelab4.c PreLabs/a-prelab4.c)
 add_executable(a-lab4.c InClassLabs/a-lab4.c)
 add_executable(a-prelab5.c PreLabs/a-prelab5.c)
 add_executable(a-lab5.c InClassLabs/a-lab5.c)
+add_executable(a-lab6.c PreLabs/a-prelab6.c)
