Programs a Mizzou Airline Reservation System

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,4 +8,9 @@ add_executable(a-prelab4.c PreLabs/a-prelab4.c)
 add_executable(a-lab4.c InClassLabs/a-lab4.c)
 add_executable(a-prelab5.c PreLabs/a-prelab5.c)
 add_executable(a-lab5.c InClassLabs/a-lab5.c)
-add_executable(a-lab6.c PreLabs/a-prelab6.c)
+add_executable(a-prelab6.c PreLabs/a-prelab6.c)
+add_executable(a-hw2.c PreLabs/a-hw2.c)
+add_executable(a-lab6.c InClassLabs/a-lab6.c)
+add_executable(a-prelab8.c PreLabs/a-prelab8.c)
+add_executable(placeholder.c PreLabs/placeholder.c)
+add_executable(a-lab7.c InClassLabs/a-lab7.c)
