--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,4 +14,5 @@ add_executable(a-hw2 PreLabs/a-hw2.c)
 add_executable(a-lab6 InClassLabs/a-lab6.c)
 add_executable(a-lab7 InClassLabs/a-lab7.c)
 add_executable(a-prelab8 PreLabs/a-prelab8.c)
+add_executable(a-lab8 InClassLabs/a-lab8.c)
 add_executable(placeholder PreLabs/placeholder.c)
