--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ add_executable(a-lab2 InClassLabs/a-lab2.c)
 add_executable(a-prelab3 PreLabs/a-prelab3.c)
 add_executable(sectionletter-hw1.c PreLabs/a-hw1.c)
 add_executable(a-lab3 InClassLabs/a-lab3.c)
-add_executable(a-hw1 PreLabs/a-hw1.c)
+add_executable(a-hw1 PreLabs/a-prelab9.c)
 add_executable(a-prelab4 PreLabs/a-prelab4.c)
 add_executable(a-lab4 InClassLabs/a-lab4.c)
 add_executable(a-prelab5 PreLabs/a-prelab5.c)
@@ -15,4 +15,5 @@ add_executable(a-lab6 InClassLabs/a-lab6.c)
 add_executable(a-lab7 InClassLabs/a-lab7.c)
 add_executable(a-prelab8 PreLabs/a-prelab8.c)
 add_executable(a-lab8 InClassLabs/a-lab8.c)
+add_executable(a-prelab9 PreLabs/a-prelab9.c)
 add_executable(placeholder PreLabs/placeholder.c)
