Exercise with pointer notation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,10 @@
-add_executable(a-lab1 InClassLabs/a-lab1.c)
+add_executable(a-lab1 InClassLabs/a-lab1.c InClassLabs/a-lab9.c)
 add_executable(a-prelab2 PreLabs/a-prelab2.c)
 add_executable(a-lab2 InClassLabs/a-lab2.c)
 add_executable(a-prelab3 PreLabs/a-prelab3.c)
 add_executable(sectionletter-hw1.c PreLabs/a-hw1.c)
 add_executable(a-lab3 InClassLabs/a-lab3.c)
-add_executable(a-hw1 PreLabs/a-prelab9.c)
+add_executable(a-hw1 PreLabs/a-prelab9.c PreLabs/a-prelab10.c)
 add_executable(a-prelab4 PreLabs/a-prelab4.c)
 add_executable(a-lab4 InClassLabs/a-lab4.c)
 add_executable(a-prelab5 PreLabs/a-prelab5.c)
@@ -16,4 +16,6 @@ add_executable(a-lab7 InClassLabs/a-lab7.c)
 add_executable(a-prelab8 PreLabs/a-prelab8.c)
 add_executable(a-lab8 InClassLabs/a-lab8.c)
 add_executable(a-prelab9 PreLabs/a-prelab9.c)
+add_executable(a-prelab10.c PreLabs/a-prelab10.c)
+add_executable(a-lab9.c InClassLabs/a-lab9.c)
 add_executable(placeholder PreLabs/placeholder.c)
