--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ add_executable(a-lab2 InClassLabs/a-lab2.c)
 add_executable(a-prelab3 PreLabs/a-prelab3.c)
 add_executable(sectionletter-hw1.c PreLabs/a-hw1.c)
 add_executable(a-lab3 InClassLabs/a-lab3.c)
-add_executable(a-hw1 PreLabs/a-prelab9.c PreLabs/a-prelab10.c)
+add_executable(a-hw1 PreLabs/a-prelab9.c PreLabs/a-prelab10.c PreLabs/a-prelab10.c)
 add_executable(a-prelab4 PreLabs/a-prelab4.c)
 add_executable(a-lab4 InClassLabs/a-lab4.c)
 add_executable(a-prelab5 PreLabs/a-prelab5.c)
