--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_executable(a-lab1 InClassLabs/a-lab1.c InClassLabs/a-lab9.c)
+add_executable(a-lab1 InClassLabs/a-lab1.c InClassLabs/a-lab9.c InClassLabs/a-lab10.c)
 add_executable(a-prelab2 PreLabs/a-prelab2.c)
 add_executable(a-lab2 InClassLabs/a-lab2.c)
 add_executable(a-prelab3 PreLabs/a-prelab3.c)
@@ -18,4 +18,5 @@ add_executable(a-lab8 InClassLabs/a-lab8.c)
 add_executable(a-prelab9 PreLabs/a-prelab9.c)
 add_executable(a-prelab10.c PreLabs/a-prelab10.c)
 add_executable(a-lab9.c InClassLabs/a-lab9.c)
+add_executable(a-lab10.c InClassLabs/a-lab10.c)
 add_executable(placeholder PreLabs/placeholder.c)
