A short assessment exercise - FizzBuzz!

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ add_executable(a-lab2 InClassLabs/a-lab2.c)
 add_executable(a-prelab3 PreLabs/a-prelab3.c)
 add_executable(sectionletter-hw1.c PreLabs/a-hw1.c)
 add_executable(a-lab3 InClassLabs/a-lab3.c)
-add_executable(a-hw1 PreLabs/a-prelab9.c PreLabs/a-prelab10.c PreLabs/a-prelab10.c)
+add_executable(a-hw1 PreLabs/a-prelab9.c PreLabs/a-prelab10.c PreLabs/a-prelab10.c PreLabs/a-prelab11.c PreLabs/fizz_buzz.c)
 add_executable(a-prelab4 PreLabs/a-prelab4.c)
 add_executable(a-lab4 InClassLabs/a-lab4.c)
 add_executable(a-prelab5 PreLabs/a-prelab5.c)
@@ -19,4 +19,7 @@ add_executable(a-prelab9 PreLabs/a-prelab9.c)
 add_executable(a-prelab10.c PreLabs/a-prelab10.c)
 add_executable(a-lab9.c InClassLabs/a-lab9.c)
 add_executable(a-lab10.c InClassLabs/a-lab10.c)
+add_executable(a-prelab11.c PreLabs/a-prelab11.c)
+add_executable(a-hw3.c PreLabs/a-hw3.c)
 add_executable(placeholder PreLabs/placeholder.c)
+add_executable(fizz_buzz.c PreLabs/fizz_buzz.c)
