--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_executable(a-lab1 InClassLabs/a-lab1.c InClassLabs/a-lab9.c InClassLabs/a-lab10.c)
+add_executable(a-lab1 InClassLabs/a-lab1.c InClassLabs/a-lab9.c InClassLabs/a-lab10.c InClassLabs/a-lab11.c)
 add_executable(a-prelab2 PreLabs/a-prelab2.c)
 add_executable(a-lab2 InClassLabs/a-lab2.c)
 add_executable(a-prelab3 PreLabs/a-prelab3.c)
@@ -21,6 +21,7 @@ add_executable(a-lab9.c InClassLabs/a-lab9.c)
 add_executable(a-lab10.c InClassLabs/a-lab10.c)
 add_executable(a-prelab11.c PreLabs/a-prelab11.c)
 add_executable(a-hw3.c PreLabs/a-hw3.c)
+add_executable(a-hw11.c InClassLabs/a-lab11.c)
 add_executable(placeholder PreLabs/placeholder.c)
 add_executable(fizz_buzz.c PreLabs/fizz_buzz.c)
 add_executable(word_count.c PreLabs/word-count.c)
