An exercise in file I/O processing

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,10 @@
-add_executable(a-lab1 InClassLabs/a-lab1.c InClassLabs/a-lab9.c InClassLabs/a-lab10.c InClassLabs/a-lab11.c)
+add_executable(a-lab1 InClassLabs/a-lab1.c)
 add_executable(a-prelab2 PreLabs/a-prelab2.c)
 add_executable(a-lab2 InClassLabs/a-lab2.c)
 add_executable(a-prelab3 PreLabs/a-prelab3.c)
 add_executable(sectionletter-hw1.c PreLabs/a-hw1.c)
 add_executable(a-lab3 InClassLabs/a-lab3.c)
-add_executable(a-hw1 PreLabs/a-prelab9.c PreLabs/a-prelab10.c PreLabs/a-prelab10.c PreLabs/a-prelab11.c PreLabs/fizz_buzz.c PreLabs/word-count.c)
+add_executable(a-hw1 PreLabs/a-prelab9.c)
 add_executable(a-prelab4 PreLabs/a-prelab4.c)
 add_executable(a-lab4 InClassLabs/a-lab4.c)
 add_executable(a-prelab5 PreLabs/a-prelab5.c)
@@ -25,3 +25,5 @@ add_executable(a-hw11.c InClassLabs/a-lab11.c)
 add_executable(placeholder PreLabs/placeholder.c)
 add_executable(fizz_buzz.c PreLabs/fizz_buzz.c)
 add_executable(word_count.c PreLabs/word-count.c)
+add_executable(e-lab1.c CS2050/e-lab1.c)
+add_executable(e-prelab2.c CS2050/e-prelab2.c)
